buggy z-index fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,7 +48,7 @@
 */
 
 .header {
-    z-index: -5 !important;
+    z-index: 0 !important;
 }
 
 .sidebar {
